--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body {
     min-height: 100vh;
 }
 
-.container {
+.main-container {
     display: flex;
+    flex-direction: column;
+    min-height: 500px;
     justify-content: center;
     align-items: center;
 }
